--- a/Jenkinsplaybook.yml
+++ b/Jenkinsplaybook.yml
@@ -6,3 +6,7 @@
     apt:
       name: openjdk-11-jdk
       state: present
+  - name: Installing Maven
+    apt:
+      name: maven
+      state: present
