--- a/Jenkinsplaybook.yml
+++ b/Jenkinsplaybook.yml
@@ -10,3 +10,7 @@
     apt:
       name: maven
       state: present
+  - name: Installing Jenkins
+    apt:
+      name: jenkins
+      state: present
