--- a/Jenkinsplaybook.yml
+++ b/Jenkinsplaybook.yml
@@ -10,7 +10,20 @@
     apt:
       name: maven
       state: present
+  - name: Download Jenkins
+    apt_key: 
+      url: https://pkg.jenkins.io/debian-stable/jenkins.io.key
+      state: present
+  - name: Configure Jenkins Repository
+    apt_repository: deb http://pkg.jenkins.io/debian-stable binary/
+    state: present
   - name: Installing Jenkins
     apt:
       name: jenkins
-      state: present
+      state: latest
+      update-cache: yes
+  - name: Start Jenkins
+    systemd:
+      name: jenkins
+      state: started
+
