--- a/Jenkinsplaybook.yml
+++ b/Jenkinsplaybook.yml
@@ -14,10 +14,12 @@
     apt_key: 
       url: https://pkg.jenkins.io/debian-stable/jenkins.io.key
       state: present
+    become: yes
   - name: Configure Jenkins Repository
     apt_repository:
       repo: 'deb http://pkg.jenkins.io/debian-stable binary/'
       state: present
+    become: yes
   - name: Installing Jenkins
     apt:
       name: jenkins
