--- a/Jenkinsplaybook.yml
+++ b/Jenkinsplaybook.yml
@@ -36,7 +36,7 @@
     become: yes
   - name: Configure Docker Repository
     apt_repository:
-      repo: 'deb https://download.docker.com/linux/ubuntu'
+      repo: 'deb https://download.docker.com/linux/ubuntu focal stable'
       state: present
     become: yes
   - name: Installing Docker
