--- a/Jenkinsplaybook.yml
+++ b/Jenkinsplaybook.yml
@@ -29,3 +29,18 @@
     systemd:
       name: jenkins
       state: started
+  - name: Download Docker
+    apt_key:
+      url: https://download.docker.com/linux/ubuntu/gpg
+      state: present
+    become: yes
+  - name: Configure Docker Repository
+    apt_repository:
+      repo: 'deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable'
+      state: present
+    become: yes
+  - name: Installing Docker
+    apt:
+      name: docker-ce
+      state: latest
+      update-cache: true
