--- a/Jenkinsplaybook.yml
+++ b/Jenkinsplaybook.yml
@@ -44,3 +44,9 @@
       name: docker-ce
       state: latest
       update-cache: true
+  - name: Adding Jenkins user to Docker Group
+    apt:
+      - name: Command1
+        command: sudo usermod -aG docker jenkins
+      - name: Command2
+        command: sudo systemctl restart jenkins
