--- a/Jfrogplaybook.yml
+++ b/Jfrogplaybook.yml
@@ -18,7 +18,7 @@
     register: jfrog_repo
   - name: Install JFrog Artifactory
     yum:
-      name: frog-artifactory-oss
+      name: frog-artifactory-oss-rpms
       state: present
   - name: Start JFrog
     service:
